<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/tool_bar_elevation"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:title="@string/setting"
            app:titleTextColor="@color/accent_primary"
            app:titleTextAppearance="@style/Theme.ToolbarTextAppearance">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="end"
                android:src="@drawable/ic_done"
                />
        </androidx.appcompat.widget.Toolbar>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_30">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Theme.TextBig"
                    android:text="@string/general"
                    android:textColor="@color/accent_primary"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textStyle="bold"
                    android:layout_marginVertical="@dimen/dp_15"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Theme.TextMedium"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/time_notification"
                    android:layout_marginBottom="@dimen/dp_5"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Theme.TextMedium"
                    android:text="Time note"
                    android:textSize="@dimen/sp_11"
                    android:textColor="@color/text_secondary"
                    android:layout_marginVertical="@dimen/dp_3"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTime"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_13"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_edit_text_setting"
                    android:focusable="true"
                    android:paddingStart="@dimen/dp_12" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Theme.TextBig"
                    android:text="@string/more_info"
                    android:textColor="@color/accent_primary"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_30"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/privacy_policy"
                        android:textAppearance="@style/Theme.TextMedium"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="@string/private_policy_content"
                        android:textAppearance="@style/Theme.TextMedium"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/sp_11"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvPolicy" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlTermOfService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="?selectableItemBackground">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"
                        android:background="@color/fence_color"
                        app:layout_constraintTop_toTopOf="@+id/ctlTermOfService" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTermOfService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/term_of_service"
                        android:textAppearance="@style/Theme.TextMedium"
                        android:layout_marginTop="@dimen/dp_20"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term_of_service_content"
                        android:textAppearance="@style/Theme.TextMedium"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/sp_11"
                        android:layout_marginTop="@dimen/dp_5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTermOfService" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="?selectableItemBackground">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"
                        android:background="@color/fence_color"
                        app:layout_constraintTop_toTopOf="@+id/ctlContactUs" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvContactUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/contact_us"
                        android:textAppearance="@style/Theme.TextMedium"
                        android:layout_marginTop="@dimen/dp_20"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us_content"
                        android:textAppearance="@style/Theme.TextMedium"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/sp_11"
                        android:layout_marginTop="@dimen/dp_5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvContactUs" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctlRateUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="?selectableItemBackground">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"
                        android:background="@color/fence_color"
                        app:layout_constraintTop_toTopOf="@+id/ctlRateUs" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRateUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/rate_us"
                        android:textAppearance="@style/Theme.TextMedium"
                        android:layout_marginTop="@dimen/dp_20"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_us_content"
                        android:textAppearance="@style/Theme.TextMedium"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/sp_11"
                        android:layout_marginTop="@dimen/dp_5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvRateUs" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>