<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.dungtran.android.core.englishflashcard.ui.features.createset.CreateSetViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            style="@style/Toolbar.Dark"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/dp_5"
            app:title="Create lesson"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_left_light">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_gravity="right|center_vertical"
                android:text="@string/save"
                android:textColor="@color/accent_secondary"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/poppins_regular"/>
        </androidx.appcompat.widget.Toolbar>
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginHorizontal="@dimen/dp_15">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_5"
                android:text="@string/lesson_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/poppins_regular"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:paddingHorizontal="@dimen/dp_10"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/sp_16"
                android:background="@drawable/edit_text_background" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginHorizontal="@dimen/dp_15">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_5"
                android:text="@string/lesson_type"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/poppins_regular"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:paddingHorizontal="@dimen/dp_10"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/sp_16"
                android:background="@drawable/edit_text_background" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_10"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:text="@string/number_of_phases"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15"
            android:fontFamily="@font/poppins_regular"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcPhases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:splitMotionEvents="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_phase" />

            <include
                android:id="@+id/noInternetLayout"
                layout="@layout/empty_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.isEmpty()? View.VISIBLE : View.GONE}" />

        </FrameLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddPhase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginVertical="@dimen/dp_10"
            android:background="@drawable/bg_round_color_button"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_phases"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>