<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.dungtran.android.core.englishflashcard.ui.features.home.HomeViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_content"
                    android:textColor="@color/accent_primary"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/sp_20"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/content"
                    android:textColor="@color/accent_primary"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/sp_15"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcSet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/item_set"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <include
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    layout="@layout/loading_layout"
                    android:visibility="@{viewModel.isLoading()? View.VISIBLE:View.GONE}" />

                <include
                    android:id="@+id/noInternetLayout"
                    layout="@layout/no_internet_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{viewModel.isEmpty()? View.VISIBLE : View.GONE}" />

            </FrameLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:src="@drawable/ic_add_light"
            android:backgroundTint="@color/accent_primary"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/add_set" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>